# DiscordPyPoetry

./: .gitignore  main.py  pyproject.toml
cogs/: fun.py  gpt.py  listeners.py  misc.py  music.py  roll.py  test.py
config/: config.py
